# mirin

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  mirin.cabal  settings.yaml
app/: Main.hs
